// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it doesn't render without notes 1`] = `null`;

exports[`it renders correctly 1`] = `
<section>
  <h2>
    Notes
  </h2>
</section>
`;

exports[`it renders groups of notes using components 1`] = `
<section>
  <h2>
    Notes
  </h2>
  <div>
    <h3>
      Developer Notes
    </h3>
    <div>
      I am a developer
    </div>
  </div>
  <div>
    <h3>
      Designer Notes
    </h3>
    <div>
      I am a designer
    </div>
  </div>
</section>
`;

exports[`it renders groups of notes using strings 1`] = `
<section>
  <h2>
    Notes
  </h2>
  <div>
    <h3>
      Developer Notes
    </h3>
    I am a developer
  </div>
  <div>
    <h3>
      Designer Notes
    </h3>
    I am a designer
  </div>
</section>
`;

exports[`it should render correctly when given a template 1`] = `
<div>
  <h2>
    Notes
  </h2>
  <div>
    Developer Notes
  </div>
  <div>
    Designer Notes
  </div>
</div>
`;
